# KGet

./: .gitignore  CHANGELOG.md  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  Cross.toml  Dockerfile  LIB.md  LICENSE  README.md  SECURITY.md  _config.yml  build-cross.sh  build-native-macos.sh  docker-compose.yml  generate-dmg-background.swift  release.sh  run-tests.sh
.codex/kget-architecture/: SKILL.md
.codex/kget-cross-platform/: SKILL.md
.codex/kget-quality/: SKILL.md
.codex/obsidian-project-memory/: SKILL.md
Formula/: kget.rb
docs/: ARCHITECTURE.md  ROADMAP.md
examples/: lib_usage.rs
macos-app/: Package.swift  README.md
macos-app/KGet/: ContentView.swift  DownloadManager.swift  Info.plist  KGet.entitlements  KGetApp.swift  MenuBarView.swift  SettingsView.swift
macos-app/ShareExtension/: Info.plist  ShareViewController.swift
src/: advanced_download.rs  app.rs  builder.rs  checksum.rs  config.rs  download.rs  error.rs  events.rs  gui.rs  gui_types.rs  interactive.rs  lib.rs  main.rs  optimization.rs  progress.rs  queue.rs  torrent.rs  torrent_downloader.rs  utils.rs
src/ftp/: client.rs  mod.rs  sftp.rs
src/metalink/: mod.rs
src/sftp/: mod.rs
src/torrent/: external.rs  mod.rs  native.rs  settings.rs  transmission.rs
src/webdav/: mod.rs
src/ytdlp/: mod.rs
tests/: cli_tests.rs  mock_server_tests.rs  torrent_tests.rs  unit_tests.rs
translations/: CHANGELOG.es.md  CHANGELOG.pt-BR.md  CONTRIBUTING.es.md  CONTRIBUTING.pt-BR.md  LIB.es.md  LIB.pt-br.md  README.es.md  README.pt-BR.md  _config.yml
