[package]
name = "Kget"
version = "1.5.2"
edition = "2024"
description = "A powerful and versatile download manager and library"
authors = ["Davi Moreira Fuzatto <davimoreiraf@gmail.com>"]
license = "MIT"
repository = "https://github.com/davimf721/KGet"
readme = "README.md"
keywords = ["download", "http", "ftp", "sftp", "torrent"]
categories = ["network-programming", "command-line-utilities", "api-bindings"]

# Main library
[lib]
name = "kget"
path = "src/lib.rs"

# Binary CLI/GUI
[[bin]]
name = "kget"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
console = "0.15.11"
fs2 = "0.4.3"
humansize = "2.1.3"
indicatif = {version = "0.17.11", features = ["rayon"]}
mime = "0.3.17"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3.30"
rayon = "1.8.0"
tempfile = "3.10.0"
flate2 = "1.0.28"
brotli = "3.5.0"
lz4 = "1.24.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0.0"
ftp = "3.0"
ssh2 = "0.9"
url = "2.4"
suppaftp = "5.1"
socks = "0.3"
transmission-rpc = "0.4"
reqwest = { version = "0.12.15", features = [
    "blocking",
    "json",
    "stream",
    "socks",
    "rustls-tls"
]}
rustyline = "16.0.0"
sha2 = "0.11.0-rc.3"
hex = "0.4.3"
[features]
default = []
# Opt-in GUI feature pulls GUI-related dependencies
gui = ["eframe", "egui", "rfd", "arboard", "opener"]

[dependencies.eframe]
version = "0.31.1"
optional = true

[dependencies.egui]
version = "0.31.1"
optional = true

[dependencies.rfd]
version = "0.15.3"
optional = true

[dependencies.arboard]
version = "3.5.0"
optional = true

[dependencies.opener]
version = "0.8.1"
optional = true

[dev-dependencies]
tempfile = "3.2"
mockito = "0.31"
