[package]
name = "Kget"
version = "1.6.1"
edition = "2024"
description = "A powerful and versatile download manager and library"
authors = ["Davi Moreira Fuzatto <davimoreiraf@gmail.com>"]
license = "MIT"
repository = "https://github.com/davimf721/KGet"
readme = "README.md"
keywords = ["download", "http", "ftp", "sftp", "torrent"]
categories = ["network-programming", "command-line-utilities", "api-bindings"]

# Main library
[lib]
name = "kget"
path = "src/lib.rs"

# Binary CLI/GUI
[[bin]]
name = "kget"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
console = "0.16.2"
fs2 = "0.4.3"
humansize = "2.1.3"
indicatif = {version = "0.18.4", features = ["rayon"]}
mime = "0.3.17"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3.32"
rayon = "1.11.0"
tempfile = "3.26.0"
flate2 = "1.1.9"
brotli = "8.0.2"
lz4 = "1.24.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.149"
dirs = "6.0.0"
ftp = "3.0"
ssh2 = "0.9"
url = "2.4"
suppaftp = "8.0.2"
socks = "0.3"
sha2 = "0.10.9"
hex = "0.4"
transmission-rpc = { version = "0.5.0", optional = true }
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "gzip", "brotli", "deflate", "stream", "hickory-dns", "native-tls"] }
rustyline = "17.0.2"
urlencoding = "2.1"

[features]
default = []
gui = ["eframe", "egui", "rfd", "arboard", "image", "egui_extras", "torrent-native", "notify-rust"]
torrent-transmission = ["transmission-rpc"]
torrent-native = ["librqbit"]

[dependencies.eframe]
version = "0.33.3"
optional = true

[dependencies.egui]
version = "0.33.3"
optional = true

[dependencies.rfd]
version = "0.17.2"
optional = true

[dependencies.arboard]
version = "3.6.1"
optional = true

[dependencies.opener]
version = "0.8.4"
optional = true

[dependencies.image]
version = "0.25.9"
features = ["png", "jpeg", "ico"]
optional = true

[dependencies.egui_extras]
version = "0.33.3"
features = ["all_loaders"]
optional = true

[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies.notify-rust]
version = "4.11"
optional = true

[dependencies.librqbit]
version = "8.1.1"
optional = true

[dev-dependencies]
tempfile = "3.10"
wiremock = "0.6"
tokio-test = "0.4"
assert_cmd = "2.0"
predicates = "3.1"
hex = "0.4"
urlencoding = "2.1"
serde_json = "1.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_System_Console", "Win32_Foundation"] }
